section8/part1/plays/roles/server/files/iptables
# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

-A INPUT -s 10.0.1.0/24 -p udp -m udp --dport 631 -j ACCEPT
-A INPUT -s 10.0.1.0/24 -p tcp -m tcp --dport 631 -j ACCEPT

-A INPUT -s 10.0.1.0/24 -m state --state NEW -p udp --dport 123 -j ACCEPT

-A INPUT -m state --state NEW -p tcp --dport 25 -j ACCEPT

-A INPUT -m state --state NEW -p udp --dport 53 -j ACCEPT
-A INPUT -m state --state NEW -p tcp --dport 53 -j ACCEPT

-A INPUT -m state --state NEW -p tcp --dport 443 -j ACCEPT

-A INPUT -m state --state NEW -p tcp --dport 143 -j ACCEPT

-A INPUT -s 10.0.1.0/24 -m state --state NEW -p tcp --dport 3128 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited

-A INPUT -m state --state NEW -p tcp --dport 80 -j ACCEPT

-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
